sys/arm64/rockchip/rk_pinctrl.c
@@ -1141,9 +1141,9 @@ rk_pinctrl_configure_pin(struct rk_pinctrl_softc *sc, uint32_t *pindata)
 {
 	phandle_t pin_conf;
 	struct syscon *syscon;
-	uint32_t bank, subbank, pin, function, bias;
+	uint32_t bank, subbank, pin, function;
 	uint32_t bit, mask, reg, drive;
-	int i, rv;
+	int i, rv, bias;
 
 	bank = pindata[0];
 	pin = pindata[1];
